[package]
name = "hash-chain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.40", default-features = false }
# plonky2_maybe_rayon = { version = "0.2" }
plonky2 = "0.2.2"
plonky2_crypto =  "0.1.0"
itertools = "0.10.5"
num = { version = "0.4.0", default-features = false }
serde = "1.0.152"
serde_with = { version = "2.2.0", features = ["hex"] }
rayon = { version = "1.5.3" }
hex = { version = "0.4.3" }
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
log = "0.4.20"
sha3 = "0.10.6"
structopt = { version = "0.3.26", default-features = false }
env_logger = "0.11.5"
thiserror = "1.0.63"
criterion = "0.3"

[dev-dependencies]
debug_print = { version = "1.0.0" }
sha2 = { version = "0.10.6" }
sha3 = { version = "0.10.6" }
serde_json = "1.0"
criterion = "0.3"

[patch.crates-io]
plonky2 = { git = "https://github.com/drcapybara/plonky2", branch = "upstream" }
plonky2_crypto = { git = "https://github.com/Lagrange-Labs/plonky2-crypto", branch = "patch-plonky2" }

[profile.dev]
opt-level = 3

[[bench]]
name = "hash_chain_bench"
path = "benches/hash_chain_benches.rs"
harness = false
